solved footer contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -294,7 +294,7 @@ footer {
 footer {
   text-align: center;
   padding: 20px;
-  background-color: #222;
+  background-color: #5377e357;
   color: white;
 }
 .social-icons a img {
